# Leather-Drafts

./: README.md  pyproject.toml
.github/workflows/: ci.yml
blocks/jacket/: m_sl40_v2.json
engine/cli/: main.py
engine/dsl/: dsl_parser.py  to_svg.py
engine/geometry/: eval.py  flatten.py  ops.py
engine/packaging/: dxf_exporter.py  page_layout.py
engine/transforms/: seam_allowance.py
engine/validators/: intersections.py
projects/example/: measurements.json  options.yml
projects/leather_blazer/: generate_pattern.py  measurements.json
projects/leather_blazer/outputs/: blazer_pattern.dxf
recipes/: jacket_princess_v2.yml
schemas/: measurements.schema.json  piece.schema.json
