[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patternlab"
version = "0.1.0"
description = "DSL → SVG/DXF pattern drafting engine"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "You"}]
dependencies = [
  "typer>=0.12",
  "svgwrite>=1.4",
  "ezdxf>=1.0",
  "shapely>=2.0",
  "pyclipper>=1.3",
  "PyYAML>=6.0",
  "jsonschema>=4.22",
  "numpy>=1.26",
]

[project.scripts]
pl = "engine.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*"]
exclude = ["projects*", "recipes*", "schemas*", "blocks*", "tests*", ".github*"]

[tool.setuptools.package-data]
engine = []
